<resources>
    <string name="app_name">Agenda</string>
    <string name="search_hint">Buscar contato</string>
    <string name="title_activity_detalhe">Novo contato</string>
    <string name="nome_do_contato">Nome do contato</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="nome">Nome</string>
    <string name="fone">Fone</string>
    <string name="email">Email</string>
    <string name="lista_vazia">Lista de contatos vazia</string>
    <string name="contato_nao_encontrado">Contato não encontrado</string>
    <string name="lista_fav_vazia">Lista de contatos sem nenhum favorito</string>
    <string name="contato_adicionado">Contato adicionado</string>
    <string name="contato_alterado">Informações do contato alteradas</string>
    <string name="contato_apagado">Contato removido</string>
    <string name="somente_favoritos">Somente favoritos</string>
    <string name="fone2">Fone 2</string>
    <string name="data_de_nascimento">Data de nascimento</string>
</resources>


