<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordlayoutdetalhe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.edu.ifspsaocarlos.agenda.activity.DetalheActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome">
        </TextView>


        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <TextView
            android:id="@+id/textViewFone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone">
        </TextView>
        <EditText
            android:id="@+id/editTextFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <!--Atualização do app para a versão 3.0
        Os usuários do app estão solicitando a inclusão de mais um campo para armazenar outro
        número de telefone do contato. Implemente esta funcionalidade.-->
        <TextView
            android:id="@+id/textViewFone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone2">
        </TextView>
        <EditText
            android:id="@+id/editTextFone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <!--FIM-->

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" >
        </TextView>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>

        <!--DATA DE NASCIMENTO-->
        <TextView
            android:id="@+id/textViewDtNasc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_de_nascimento" >
        </TextView>

        <EditText
            android:id="@+id/editTexDtNasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/editTexDtNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_weight="1"
                android:focusable="false"
                />

            <ImageButton
                android:id="@+id/imageButtonCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:layout_weight="3"
                />
        </LinearLayout>-->





            <!--FIM-->
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

